@@ -5,6 +5,7 @@
 * gadu: TLS enabled by default for new accounts (Vogel)
 * sound: #383 implemented: option to configure per-buddy sound file (Vogel)
 * gui: #2811 fixed: do not show "Move to group" menu option if moving from Everybody or Ungroupped (Vogel)
+* encryption_ng: #2952 implemented: add depreceation message (Vogel)
 
 +++ version 2.0-rc3
 * core: various crashes fixed (Vogel)
